<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/list_back"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/list_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/borderline_rectangle"
        android:padding="3dp"
        android:src="@drawable/user1"
        app:layout_constraintBottom_toBottomOf="@id/list_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/id"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/list_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/time"
        app:layout_constraintLeft_toRightOf="@id/list_image"
        app:layout_constraintTop_toBottomOf="@id/list_id" />

    <ImageView
        android:id="@+id/list_rating"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/threestar"
        app:layout_constraintLeft_toRightOf="@id/list_time"
        app:layout_constraintTop_toBottomOf="@id/list_id" />

    <TextView
        android:id="@+id/list_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/content"
        app:layout_constraintLeft_toRightOf="@id/list_image"
        app:layout_constraintTop_toBottomOf="@id/list_time" />

    <TextView
        android:id="@+id/list_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/like"
        app:layout_constraintLeft_toRightOf="@id/list_image"
        app:layout_constraintTop_toBottomOf="@id/list_content" />

    <TextView
        android:id="@+id/list_like_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/like_count"
        app:layout_constraintLeft_toRightOf="@+id/list_like"
        app:layout_constraintTop_toBottomOf="@+id/list_content" />

    <TextView
        android:id="@+id/list_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/report"
        app:layout_constraintLeft_toRightOf="@id/list_like_count"
        app:layout_constraintTop_toBottomOf="@id/list_content" />


</androidx.constraintlayout.widget.ConstraintLayout>